@@ -544,6 +544,9 @@ General
       -- `Easy Slide Shows With reStructuredText & S5
       <../user/slide-shows.html>`_
 
+  Analogue to the ``sectnum_xform`` setting, it could be used by the
+  latex writer to switch to a LaTeX generated ToC (currently, the latex
+  writer calls it "use_latex_toc").
 
 Documentation
 =============
@@ -1912,11 +1915,6 @@ Bug fixes
 * Too deeply nested lists fail: generate a warning and provide
   a workaround.
 
-* Symbol footnotes fail with "use_latex_footnotes".
-
-  For a possible fix see
-  http://help-csli.stanford.edu/tex/latex-footnotes.shtml
-
 
 Generate clean and configurable LaTeX source
 ----------------------------------------------
@@ -1965,11 +1963,12 @@ Which packages do we want to use?
 
 * footnotes
 
-  + enable symbolic footnotes (parallel to numeric)
-
   + document customization (links to how-to and packages)
+  
+  + True footnotes with LaTeX auto-numbering? (as option?)
 
-  + find out how to link and back-link to footnotes with `hyperref`
+  + Add back-links (analogue to the system message, but in the
+    \DUfootnotetext and \DUfootnotemark cmds).
 
     The `hyperref` manual says:
 
