@@ -1429,8 +1429,6 @@ Workaround:
   ``use-latex-citations`` options.
 
   * Use LaTeX footnotes and citations for printing or more complex layout.
-  * Footnotes and citations done with figures might excell in hyperlink
-    support.
 
 If ``use-latex-citations`` is used, a bibliography is inserted right at
 the end of the document. *This should be customizable*.
